edits in all Read Mes

--- a/old/Concrete_model_PETRI_no_recycle.ipynb
+++ b/old/Concrete_model_PETRI_no_recycle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -273,15 +273,15 @@
       "information on commands.\n",
       "\n",
       "CPLEX> Logfile 'cplex.log' closed.\n",
-      "Logfile '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmp428zknhs.cplex.log' open.\n",
-      "CPLEX> Problem '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmplosxakbh.pyomo.lp' read.\n",
-      "Read time = 0.00 sec. (0.01 ticks)\n",
-      "CPLEX> Problem name         : /var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmplosxakbh.pyomo.lp\n",
+      "Logfile '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmpcakofug5.cplex.log' open.\n",
+      "CPLEX> Problem '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmps_psxqrz.pyomo.lp' read.\n",
+      "Read time = 0.02 sec. (0.01 ticks)\n",
+      "CPLEX> Problem name         : /var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmps_psxqrz.pyomo.lp\n",
       "Objective sense      : Minimize\n",
       "Variables            :      42\n",
       "Objective nonzeros   :      23\n",
       "Linear constraints   :     126  [Less: 105,  Equal: 21]\n",
-      "  Nonzeros           :     243\n",
+      "  Nonzeros           :     246\n",
       "  RHS nonzeros       :       3\n",
       "\n",
       "Variables            : Min LB: 0.000000         Max UB: all infinite   \n",
@@ -290,20 +290,20 @@
       "  Nonzeros           : Min   : 1.000000         Max   : 5.000000       \n",
       "  RHS nonzeros       : Min   : 1.000000         Max   : 100.0000       \n",
       "CPLEX> Tried aggregator 1 time.\n",
-      "LP Presolve eliminated 97 rows and 16 columns.\n",
+      "LP Presolve eliminated 96 rows and 16 columns.\n",
       "Aggregator did 3 substitutions.\n",
-      "Reduced LP has 26 rows, 23 columns, and 86 nonzeros.\n",
-      "Presolve time = 0.00 sec. (0.07 ticks)\n",
+      "Reduced LP has 27 rows, 23 columns, and 89 nonzeros.\n",
+      "Presolve time = 0.01 sec. (0.07 ticks)\n",
       "Initializing dual steep norms . . .\n",
       "\n",
       "Iteration log . . .\n",
       "Iteration:     1   Dual infeasibility =            18.000000\n",
       "\n",
       "Dual simplex - Optimal:  Objective = -1.9666666667e+03\n",
-      "Solution time =    0.00 sec.  Iterations = 8 (8)\n",
-      "Deterministic time = 0.14 ticks  (135.76 ticks/sec)\n",
+      "Solution time =    0.02 sec.  Iterations = 8 (8)\n",
+      "Deterministic time = 0.14 ticks  (6.65 ticks/sec)\n",
       "\n",
-      "CPLEX> Solution written to file '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmpxjkitiue.cplex.sol'.\n",
+      "CPLEX> Solution written to file '/var/folders/y6/tkwmbsn530x0zj51jkw6wfjm0000gq/T/tmp3ev0bff2.cplex.sol'.\n",
       "CPLEX> Model unknown\n",
       "\n",
       "  Variables:\n",
@@ -911,8 +911,8 @@
       "        Key  : Lower : Body                              : Upper : Active\n",
       "        None :   0.0 : mu[20] - (mu[15] + q[17] + q[18]) :   0.0 :   True\n",
       "    Constraint21 : Size=1, Index=None, Active=True\n",
-      "        Key  : Lower : Body           : Upper : Active\n",
-      "        None :  -Inf : - mu[1] + q[1] :   0.0 :   True\n",
+      "        Key  : Lower : Body                                        : Upper : Active\n",
+      "        None :  -Inf : - mu[1] - (- q[1] - q[3] - 3*q[4] - 5*q[7]) :   0.0 :   True\n",
       "    Constraint22 : Size=1, Index=None, Active=True\n",
       "        Key  : Lower : Body           : Upper : Active\n",
       "        None :  -Inf : - mu[2] + q[1] :   0.0 :   True\n",
